fixed overscroll on iOS

--- a/src/app.css
+++ b/src/app.css
@@ -39,3 +39,7 @@ video {
 	display: block;
 	vertical-align: middle;
 }
+
+html {
+	overscroll-behavior: none;
+}
